# Ensemble

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  Ensemble_V1_Blueprint.md  Ensemble_V3_Blueprint.md  Ensemble_documentation.md  Ensemble_v2_Blueprint.md  LICENSE  LOCAL_RUN.md  README.md  docker-compose.yml  ensemble-backend-aarch64-apple-darwin.spec  pyproject.toml  requirements.txt  scratch_test_search.py
backend/: __init__.py
config/: marketplace_sources.json
core/: agent_base.py  audit.py  auth.py  auth_routes.py  auto_update_service.py  conversation_memory.py  cost_control.py  dag_engine.py  docker_executor.py  docker_sandbox.py  engine.py  ensemble_space.py  format_detector.py  github_pack_builder.py  governance.py  governance.py.tmp  lifecycle.py  llm_provider.py  managed_agent.py  marketplace_sync.py  network_governance.py  pack_builder.py  pack_eval.py  rag.py  realtime.py  scheduler.py  security.py  security_policy.py  settings.py  skill_registry.py  space_base.py  supabase_client.py  tool_decorator.py  universal_importer.py  ws_manager.py
deliverables/: DUCKDUCKGO_FIX.md  EXECUTIVE_SUMMARY.md  FINAL_ACHIEVEMENT_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_PROGRESS.md  MARKETPLACE_INTEGRATION_README.md  NAMESPACE_BADGE_QUICK_REF.md  PHASE5_SUMMARY.md  QUICK_START.md  SECURITY_AND_COST_CONTROL_BLUEPRINT_2026-04-10.md  UI_IMPLEMENTATION_SUMMARY.md  marketplace_api_guide.md  (+1 more)
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
(+481 files in other folders)
