[package]
name = "ensemble"
version = "1.0.0"
description = "Ensemble — Autonomous AI Company Platform"
authors = ["Ensemble Team"]
license = "MIT"
repository = "https://github.com/manojm404/Ensemble"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
